# datum

./: .gitignore  AGENTS.md  Caddyfile  IMPLEMENTATION_STATUS.md  SECURITY_ASSUMPTIONS.md  SPEC_CONFORMANCE.md  UAT_READINESS.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_search_infrastructure.py  003_search_dependency_cascades.py  004_embedding_dimension_flex.py  005_evaluation_tables.py  006_intelligence_layer.py  007_agent_api_keys_idempotency.py  008_phase7_intelligence_graph.py  009_phase8_operational_tables.py  010_phase9_lifecycle_tables.py  011_version_head_event_canonical_path.py  012_hook_events.py
backend/datum/: config.py  db.py  main.py  mcp_server.py  sqltypes.py  watcher.py  worker.py
backend/datum/api/: admin.py  annotations.py  attachments.py  citations.py  collections.py  context.py  dashboard.py  documents.py  entities.py  evaluation.py  filesystem.py  inbox.py  lifecycle.py  projects.py  saved_searches.py  search.py  sessions.py  templates.py  traceability.py  upload.py  versions.py
backend/datum/cli/: __init__.py  doctor.py  eval.py  gc.py  insights.py  main.py  portable.py
backend/datum/models/: __init__.py  agent.py  base.py  core.py  evaluation.py  intelligence.py  lifecycle.py  operational.py  search.py
backend/datum/schemas/: agent.py  annotation.py  attachment.py  collection.py  dashboard.py  document.py  entity.py  evaluation.py  inbox.py  lifecycle.py  project.py  saved_search.py  search.py  traceability.py  version.py
backend/datum/services/: answer.py  api_keys.py  attachment_manager.py  audit.py  auth.py  blob_gc.py  blob_store.py  boundaries.py  candidate_extraction.py  chunking.py  citations.py  content_scanning.py  context.py  contradiction.py  dashboard.py  db_sync.py  delta_aggregator.py  doctor.py  document_manager.py  entities.py  entity_extraction.py  evaluation.py  extraction.py  filesystem.py  idempotency.py  ingestion.py  insight_analysis.py  intelligence.py  link_detection.py  llm_candidates.py  llm_relationships.py  manifest_history.py  metrics.py  model_gateway.py  pipeline_configs.py  portable_bundle.py  preflight.py  project_manager.py  project_versioning.py  rate_limiter.py  (+15 more)
backend/tests/: conftest.py  test_agent_api.py  test_answer.py  test_api.py  test_api_keys.py  test_audit.py  test_auth.py  test_blob_gc.py  test_blob_store.py  test_boundaries.py  test_candidate_extraction.py  test_chunking.py  test_citations.py  test_codex_adapter.py  test_config.py  test_content_scanning.py  test_context.py  test_contradiction.py  test_doctor.py  test_document_manager.py  test_entity_extraction.py  test_evaluation.py  test_extraction.py  test_filesystem.py  test_health.py  test_hooks.py  test_idempotency.py  test_ingestion.py  test_insight_analysis.py  test_intelligence.py  test_legacy_manifest.py  test_lifecycle.py  test_link_detection.py  test_llm_candidates.py  test_llm_relationships.py  test_mcp.py  test_metrics.py  test_model_gateway.py  test_models.py  test_operational_scripts.py  (+17 more)
backend/tests/fixtures/: sample_eval_set.json
docs/: project-workflow-implementation-plan.md  project-workflow-phase-0-scope-lock.md  project-workflow-phase-1-navigation-foundation.md  project-workflow-phase-2-project-creation.md  project-workflow-phase-3-command-search.md  project-workflow-phase-4-project-settings.md  project-workflow-phase-5-validation.md  project-workflow-phase-6-ui-fidelity.md  project-workflow-phase-7-final-signoff.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
gliner-ner-service/: README.md  pyproject.toml
gliner-ner-service/scripts/: run_dev.sh  run_prod.sh  smoke_test.sh
gliner-ner-service/src/gliner_ner_service/: app.py  backend.py  config.py  models.py
gliner-ner-service/tests/: test_app.py  test_backend.py
qwen3-embedder-service/: .gitignore  Dockerfile  Dockerfile.cpu  README.md  docker-compose.yml  pyproject.toml
qwen3-embedder-service/config/: embedder_profiles.yaml
qwen3-embedder-service/scripts/: run_cuda.sh  run_dev.sh  run_mlx.sh  run_prod.sh  run_vllm.sh  smoke_test.sh
qwen3-embedder-service/src/qwen3_embedder/: __init__.py  main.py  version.py
qwen3-embedder-service/src/qwen3_embedder/api/: __init__.py  middleware.py  models.py  routes.py
qwen3-embedder-service/src/qwen3_embedder/backends/: __init__.py  base.py  mlx_backend.py  pytorch_backend.py  registry.py  vllm_backend.py
qwen3-embedder-service/src/qwen3_embedder/core/: __init__.py  batching.py  config.py  embedding.py  errors.py  prompt.py  tokenization.py
qwen3-embedder-service/src/qwen3_embedder/logging/: __init__.py  structured.py
qwen3-embedder-service/src/qwen3_embedder/utils/: __init__.py  health.py  warmup.py
qwen3-embedder-service/tests/: __init__.py  test_embedding.py  test_prompt.py
qwen3-reranker-service/: .env.example  .gitignore  Dockerfile  Dockerfile.vllm  README.md  docker-compose.yml  pyproject.toml
qwen3-reranker-service/config/: development.yaml  reranker_profiles.yaml
qwen3-reranker-service/scripts/: run_cuda.sh  run_dev.sh  run_mlx.sh  run_prod.sh  run_vllm.sh  smoke_test.sh
qwen3-reranker-service/src/qwen3_reranker/: __init__.py  version.py
qwen3-reranker-service/src/qwen3_reranker/api/: __init__.py  app.py  models.py
qwen3-reranker-service/src/qwen3_reranker/backends/: __init__.py  base.py  mlx_backend.py  pytorch_backend.py  registry.py  vllm_backend.py
qwen3-reranker-service/src/qwen3_reranker/core/: __init__.py  batching.py  config.py  errors.py  prompt.py  scoring.py  tokenization.py
qwen3-reranker-service/tests/: __init__.py  conftest.py  test_api_contract.py  test_config.py  test_prompt_formatting.py  test_scoring.py
scripts/: backup.sh  benchmark-queries.py  bootstrap-gliner-gpu-node.sh  bootstrap-gpu-node.sh  create-admin-key.py  create-zfs-datasets.sh  integration-test.sh  restore-drill.sh  run-gliner-gpu-node.sh  snapshot-policy.sh
systemd/: README.md  datum-embedder.service  datum-reranker.service  (+1 more)
(+56 files in other folders)
