[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gliner-ner-service"
version = "0.1.0"
description = "Datum native GLiNER NER HTTP service"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brennan Conley"}
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
pytorch = [
    "gliner>=0.2.16",
    "torch>=2.4.0",
    "transformers>=4.45.0",
]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
gliner-ner-service = "gliner_ner_service.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gliner_ner_service"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["gliner_ner_service"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
